--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -36,3 +36,95 @@
         }
     }
 }
+
+//MENU overlay
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+
+    &.show{
+        visibility: visible;
+    }
+
+    &-branding, 
+    &-nav{
+        display:flex;
+        flex-flow: column wrap; 
+        align-items: center;
+        justify-content: center;
+        float:left;
+        width: 50%;
+        height: 100vh;
+    }
+
+    &-nav{
+        margin: 0;
+        padding: 0;
+        background: rgba(darken($gray, 5), 0.9);
+        list-style: none;
+        transform: translate3d(0, -100%, 0);
+        @include easeOut;
+
+        &.show{
+            transform: translate3d(0, 0 ,0);
+        }
+    }
+
+    //BRANDING SIDE
+    &-branding {
+        background: rgba($gray, 0.9);
+        @include easeOut;
+        transform: translate3d(0, 100%, 0);
+
+        &.show{
+            transform: translate3d(0, 0, 0);
+        }
+
+        .portrait{
+            width: 250px;
+            height: 250px;
+            background: url('../img/portrait.jpg');
+            background-size: cover;
+            border-radius:50%;
+            border: solid 3px $yellowish;
+        }
+    }
+
+    .nav-item{
+        transform: translate3d(600px, 0, 0);
+        @include easeOut;
+
+        &.show{
+            transform: translate3d(0,0,0);
+        }
+        &.current > a{
+            color: $yellowish;
+        }
+    }
+    
+ 
+    .nav-link{
+        display:inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: $white;
+        text-decoration: none;
+        @include easeOut;
+
+        &:hover{
+            color: $yellowish;
+        }
+
+    }
+}
+
+@for $x from 1 through 4 {
+    .nav-item:nth-child(#{$x}){
+        transition-delay: $x * 0.1s;
+    }
+}
